--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -271,15 +271,18 @@ Table 6.x. Learning Dimensions of the 3M Game Making Model
 
 Appendix.learningmap explores in more detail the evolution of this map, which acknowledges significant tensions in integration of concepts into a informal context, and draws on the process and rationale of Bevan and Petrich's  [-@bevan_learning_2015; -@petrich_it_2013] work to bring a similar learning map to a seemingly chaotic tinkering and making process in museum contexts. Papert's research on Microworlds saw one of the roles learning designers to shape the affordances of playful learning environments to steer learners to explore scientific concepts, mathematical concepts, for example geometry in Turtle computing. Similarly, the design of this research's template can be seen as a half-baked Microworld, with key conceptual affordances represented in the learning map above. A summary of a book chapter [@chesterman_game_2023] exploring these issues with recommendations for practitioners is included in Appendix.learningmap.
 
+Evidence of personal appropriation in video data was not be limited to testable knowledge, many of the behaviours explored in this chapter show both the appropriation and feeding back of varied understandings of game design patterns and design practices and skills. Given that this dimension is not explored in the thesis which has a greater focus on community and social aspects of use of GDPs, examples of personal appropriation are included here only briefly (additional examples may be included in Appendix.learning)
 
-Evidence of personal appropriation in video data was not be limited to testable knowledge, many of the behaviours explored in this chapter show both the appropriation and feeding back of varied understandings of game design patterns and design practices and skills.
+While the flexible / non-testing nature of the environment makes claims here difficult, a reflection by a parent interview data on a testing activity in P1 is relevant. S parent on completion of a jigsaw test, celebrated seeing that her family were able to recognise and order the code structures presented as validation of the experiential, non-instructional approach (see appendix.learningmap).
 
-For example, the repeated, solo, incremental changes by Toby in vignette 1 (V1), indicate a personal appropriation of and design processes, and concepts of game challenge related to the implementation of game design patterns.
+The repeated, solo, incremental changes by Toby, an example of which are illustrated in  V1 indicate a personal appropriation of design processes, and concepts of game challenge related to the implementation of game design patterns.
 
-MORE
+In line with  CHAT theory, this can be interpreted as an operationalisation of previous actions which were previously explicitly taught or learnt [@leontiev_activity_2009] CHECK.  Similar demonstrations of fluidity of practice are shown in by most participants in varied areas: uploading assets (see V4) , adjusting game challenge via altering GDPs elements,
 
-Given that this dimension is not explored in the thesis which has a greater focus on community and social aspects of use of GDPs, examples of personal appropriation are included here only briefly (additional examples may be included in  Appendix.learning)
 
+MORE?
+
+LINK - PICK UP IN NEXT PARAGRAPH TOO
 Rogoff's third plane of analysis, one  which mostly closely aligns with much educational research is that of personal appropriation. Rogoff is careful to underline the bi-directional nature of the appropriation of personal knowledge, emphasising Vygotsky's foundational view of knowledge as being mutually constituted as participants feed their interpretation of knowledge back into the communities of which they are a part. Given this bi-directional process, aspects of personal appropriation can be inferred from interpersonal interactions explored in the following section.
 
 <!-- This exploration focuses on the potential of the 3M learning design rather than making claims on the suitability to develop CT via game making which is explored extensively in other research. -->
@@ -311,7 +314,7 @@ As previously explored I had a reluctance to shift learners away from the practi
 
 ## GDPs used in the process of guided participation (Target 2500)
 
-This section explores data on the use of GDPs from the perspective of interpersonal interaction. Here, the process of being guided into planned activity or peer work is exploratory, contributing to interpersonal processes that serve the completion of the activity. Based on observations of video data, I describe four categories of how GDPs are used in diverse meditational strategies, most frequently through pair participants' interactions.
+This section explores data on the use of GDPs from the perspective of interpersonal interaction. Here, the process of being guided into planned activity or peer work is exploratory, contributing to interpersonal processes that serve the completion of the activity. As outlined in the previous section, personal understandings of knowledge can be observed in this interpersonal activity, in particular in the interactions between parents and children. Based on observations of video data, I describe how GDPs are used in diverse meditational strategies. I prioritise four categories of interactions which draw on GDPs, specifically use of a provided menu GDPs and supporting documentation, use of GDPs in project ideation and prioritisation, within division of labour and as part of emerging technical processes.
 
 <!-- In particular how , ideation, division of labour and prioritisation, and the adoption of technical processes intersect with the use of GDPs. -->
 
@@ -328,19 +331,26 @@ This section examines the use of GDPs to facilitate guided participation via int
 <!-- - RECAP DOCUMENTATION TENSIONS HERE WITH FOCUS ON AGENCY
 - ALSO FOCUS ON MY ROLE AS A DESIGNER INTRODUCING DOCUMENTATION AND STRATEGIES (PERHAPS MAPS TOO IN LINE WITH 5TH D) -->
 
-The use of a catalogue of design patterns addresses the tension between participants' choice and the need for documentation to support the technical implementation of code structures. However, not all participants used the provided instructions and developed diverse methods to access support for implementing patterns. At the cultural level of activity analysis, the previous section outlined how providing a menu of game design patterns enabled participants to select patterns aligned with their personal interests, potentially reducing feelings of alienation from coding or game-making culture. This section further examines how a curated collection of game patterns, along with supporting documentation, created opportunities and influenced participants' experiences on the interpersonal plane of activity.
+<!-- However, not all participants used the provided instructions and developed diverse methods to access support for implementing patterns (IS THIS PART NEEDED?). -->
 
-The previous chapter explored, from my perspective as a facilitator, how the use of a menu of GDPs helped address the tension between participant choice and the need for supporting materials on code implementation. Vignette 9 outlines a rare interlude where I addressed the whole class, describing the webpage presenting the collection of GDPs as a graphical menu.  _"It’s almost like this is our control panel. You decide what do you want to do next and we jump off from there."_.
+The use of a catalogue of design patterns addresses the tension between participants' choice and the need for documentation to support the technical implementation of code structures.
 
-Given the integration of these elements into the learning design from P2 onwards, it would seem natural that participants would use the provided framework, at least in some capacity. Despite this, the evolving use of this documentation, the variations in its use, and the interpersonal interactions surrounding it merit further attention due to the diversity, evolution, and fundamental importance of GDP use at this interpersonal scope.
+The previous chapter explored, from my perspective as a facilitator, how the use of a menu of GDPs helped address the tension between participant choice and the need for supporting materials on code implementation. Appendix.themeing outlines the evolution of how the sub categories of patterns evolved and my rationale guiding them.
 
-Vignette 2 (V2.) observes parent Suzanna's use of a step by step tutorial to address the child's goal of implementing a chosen GDPs. Olivia is limited in her technical skills but leverages the concept of two GDPs in particular to persist in problem solving using the tutorial and trouble shooting using facilitator help. Given Olivia's limited computer literacy (explored in the Vignette commentary) the idea of the GDP is likely to be from a cultural source, most likely playtesting. By way of contrast, Toby in Vignette 1 (see V1.8 - V1.17) engages in lone working, copying a code from code snippet example of the game design pattern which he chose from a graphical menu of patterns. His independence in adding new features using supporting documentation without facilitator support helps him take on a mantle of a mentor inspiring and helping others add the same GDPs to their games.
+Vignette 9 outlines a rare interlude where I addressed the whole class, describing the webpage presenting the collection of GDPs as a graphical menu.  _"It’s almost like this is our control panel. You decide what do you want to do next and we jump off from there."_.
 
+<!-- **tautology** Given the integration of these elements into the learning design from P2 onwards, it would seem natural that participants would use the provided framework, at least in some capacity. Despite this, the evolving use of this documentation, the variations in its use, and the interpersonal interactions surrounding it merit further attention due to the diversity, evolution, and fundamental importance of GDP use at this interpersonal scope. -->
+
+Video data showed how a curated collection of game patterns, along with supporting documentation, created opportunities and influenced participants' experiences.
+
+Firstly, participants choice over which patterns they tackled did create a personal connection to these sub-goals, a process which should reduce feelings of alienation from coding or game-making culture.
+
+Vignette 2 (V2.a) observes parent Suzanna's use of a step-by-step tutorial to address the child's goal of implementing a chosen GDPs. Olivia is limited in her technical skills but leverages the concept of two GDPs in particular to persist in problem solving using the tutorial and trouble shooting using facilitator help. Given Olivia's limited computer literacy (explored in the Vignette commentary) the idea of the GDP is likely to be from a cultural source, most likely playtesting. By way of contrast, Toby in Vignette 1 (see V1.8 - V1.17) engages in lone working, copying a code from code snippet example of the game design pattern which he chose from a graphical menu of patterns. His independence in adding new features using supporting documentation without facilitator support helps him take on a mantle of a mentor inspiring and helping others add the same GDPs to their games.
+
+Not all participants engage with this menu: a later section shows how GDPs picked up by one learner, via provided documentation e.g Toby are propagate in other ways. For example, in Vignette 3 (V3.a) Ed cedes this aspect to his father in a way explored in the section below on division of labour
 
 OTHER DATA  HERE - Other examples include,
 Examples from the data of participants using GDPs as a framework for organisation and project navigations.
-
-Not all participants engage with this menu: a later section shows how GDPs picked up by one learner, via provided documentation e.g Toby are propagate in other ways.
 
 In addition to using written documentation as a framework, in P2, I guided supporting student facilitators to ask what patterns participants were currently working on or had recently completed as a way of provoking informal reflection on project progress.
 
@@ -400,12 +410,12 @@ In Vignette 5.d, where the parent Molly wants to export an image from the graphi
 <!-- OTHER DATA ON GDP AS LINGUA FRANCA AT VARIOUS STAGES. -->
 <!-- In this interaction above which was used to illustrate Molly and Nadine's division of labour, the parent is focused on completing the action of creating a graphical asset of a hazard as part of the activity of adding the GDP of including a hazard into the game. -->
 
-Video date surfaced frequently use of GDPs terms as a lingua franca to organise and prioritise game making activity. The following exchange from Vignette 3 between participants Ed and Mark shows the use of GDP concepts to help resolve a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise work.
+Video date surfaced frequently use of GDPs terms as a lingua franca to organise and prioritise game making activity. An exchange from Vignette 3 between participants Ed and Mark shows the use of GDP concepts to help resolve a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise work.
 
-    Mark: I’ve brought the music, and also we could just concentrate on one thing and just change that. You know, keep working through.
-    Ed: Yeah. I think I want to get an enemy in - oh no - my person animated.
-    Mark: So you want to get your person animated that’s the main thing.
-    Mark: Shall we concentrate on that and changing the platforms into something different?
+<!-- Mark: I’ve brought the music, and also we could just concentrate on one thing and just change that. You know, keep working through.
+Ed: Yeah. I think I want to get an enemy in - oh no - my person animated.
+Mark: So you want to get your person animated that’s the main thing.
+Mark: Shall we concentrate on that and changing the platforms into something different? -->
 
 The pair's initial listing of features is a brainstorming technique uses of the approximate names of of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). The vignette analysis sees the parent _overwhelmed_ with the child's lack of focus on one pattern "that’s what I mean, you can’t just skip around like that".
 
@@ -467,9 +477,7 @@ Addressing division of labour on an interpersonal plane, participants worked mos
 
 GDPs feature in processes division of labour in a variety of ways: working knowledge of different types of GDPs can help participants to divide work by working on different patterns or taking on project elements within patterns.
 
-
-
-Returning to the example of Mark and Toby from Vignette 3, Mark appears to be keen to quickly pick one pattern, then then work through the documentation on that pattern, a process he later refers to in interview data a _plodding_. At a different stage Mark is engaged puzzling over documentation on how to add animation to a character for some time. This results in Ed being blocked from progressing. In an exchange listed in Vignette 4, the child proposes dividing their labour informally, appearing to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating audio and graphical assets in a more experimental process. The use of GDPs concepts here is used in the young person's circumvention of a tension via his informal division on labour.
+In Vignette 3, Mark appears to be keen to quickly pick one pattern, then then work through the documentation on that pattern, a process he later refers to in interview data a _plodding_. At a different stage Mark is engaged puzzling over documentation on how to add animation to a character for some time. This results in Ed being blocked from progressing. In an exchange listed in Vignette 4, the child proposes dividing their labour informally, appearing to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating audio and graphical assets in a more experimental process. The use of GDPs concepts here is used in the young person's circumvention of a tension via his informal division on labour.
 
 Analysis of video data uncovered flexible way in which the participant divided the process of game making, often showing traces of home collaboration practices. For example, In vignette 2, Suzanna(p) and Olivia(c) relied on the parent to do the majority of code implementation and shared one computer. The pair also alternated between use of keyboard and mouse to give the child hands on experience when possible. In interview data the parent notes _"I resist the urge to fix things immediately when she struggles."_ In an illuminating exchange, Olivia uses the name of a GDP within a request for her parent to take on a specific task within their making process.
 
@@ -755,7 +763,11 @@ HOW TO EXTEND?
 <!-- While GDPs were often demanded by pairs or individuals, and then in P2 a menu of suggested GDPs introduced by had a role, there is a community dimension in the way participants worked with the concepts and the concrete implementation of GDPs.   -->
 <!-- In addition to the names of patterns as a lingua franca to comment on games during the process of playtesting, participants also    -->
 
-Within the emerging idioculture of the game-making sessions, and during playtesting in particular, the implementation of popular or novel GDPs by participant pairs or individuals is often spread through peer activity. Both documented (those part of provided resources) and novel GDPs (those introduced by participants) were transmitted between participants, enriching the games of participants. At times, participants were influenced by playing the games of others, and at times, they would request the direct help of peers to implement GDPs in their own games. In part two of Vignette 1, Toby's work adding 21 levels to his game is noticed by Bertie.
+Within the emerging idioculture of the game-making sessions, and during playtesting in particular, the implementation of popular or novel GDPs by participant pairs or individuals is often spread through peer activity. Both documented (those part of provided resources) and novel GDPs (those introduced by participants) were transmitted between participants, enriching the games of participants. At times, participants were influenced by playing the games of others, and at times, they would request the direct help of peers to implement GDPs in their own games.
+
+As the process of playtesting emerged, community norms began to develop, some of which where influenced by home experience of game playing. Vignette 4 (V4.a) outlines the community norming of Molly(p)'s game to conform to expected standards of a platform game.
+
+In part two of Vignette 1, Toby's work adding 21 levels to his game is noticed by Bertie.
 
      Bertie: Why’s that enemy in every level
      Toby: He’s not.
@@ -782,12 +794,12 @@ This exchange shows the propagation of GDPs emerging from the process of communi
 
 <!-- A different pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence. -->
 
-
-
 <!-- **New GDPs emerged from existing patterns through peer activity during playtesting** -->
 <!-- DEVELOP -->
 
 In addition to the propagation of GDPs offered in the menu of supporting documentation, other gameplay patterns and related design concepts emerged organically from the community. For example, Olive's concept of a level that eschews challenge and offers only rewards, a type of bonus stage pattern, emerged through playful experimentation (see Vignette 2). Similarly, the concept of a safe zone in the game of Pearl and Clive arrived as a direct result of adding a moving enemies GDP. The extensive use of that pattern dominated the game challenge to such an extent that it became essential for players to quickly identify and use 'safe zones'. These novel concepts may have emerged spontaneously or have a source in part from participants' funds of gaming knowledge. In either case, once the concept of safe zone or bonus level enters the linguistic and coding repertoire of this community of game makers, they may spread if other participants pick up on them. Even if other participants only noticed the use of GDPs and used approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystems of the learning community.
+
+
 
 
 <!-- **synthesis of this section** -->
